fixed a bug with background color being cut off

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,4 @@
 .root {
   display: flex;
   flex-direction: column;
-  background: whitesmoke;
-  height: 100vh;
 }
